Version/V1.0.0/docs/architecture.md
# 架构说明

## 设计目标

应用采用单模块、无数据库、无网络的最小架构，优先保证电视端稳定性和可维护性。播放策略与 Android 框架隔离，界面层只负责设备交互和播放器生命周期。

## 模块职责

- `PlaybackConfiguration`：不可变配置值对象。
- `PlaybackPolicy`：决定当前应播放、选片还是提示授权失效；同时决定开机时是否应启动。
- `PlaybackConfigStore`：使用私有 SharedPreferences 保存少量非敏感设置。
- `UriAccess`：只对用户明确选择的 URI 检查可读性并获取显示名称。
- `MainActivity`：创建/释放 ExoPlayer、循环播放、全屏与异常恢复。
- `SettingsActivity`：系统文件选择、更换/清除文件、声音和画面设置。
- `BootCompletedReceiver`：在满足“已选视频、授权有效、开机启动开启”时尝试拉起主界面。

## 数据流

```text
系统文件选择器 -> 持久 URI 授权 -> PlaybackConfigStore
                                     |
启动/返回前台 -> UriAccess -> PlaybackPolicy -> MainActivity/ExoPlayer
                                     |
开机广播 ----------------------------> BootCompletedReceiver
```

## 安全与隐私

- 不申请 `READ_MEDIA_VIDEO` 或旧版整盘存储权限。
- 只使用用户在系统选择器中授权的单个 `content://` URI。
- 不记录 URI、文件名或媒体内容到业务日志。
- 不联网，Manifest 明确禁止明文网络流量。
- 禁止系统云备份和设备迁移复制应用偏好，避免文件路径信息离开设备。
- 没有数据库、账号、Token、API Key 或后台服务。

## 生命周期

- `onStart` 检查配置和授权，满足条件后创建播放器并从头播放。
- `onStop` 立即释放播放器，避免离开应用后继续占用解码器和音频焦点。
- `REPEAT_MODE_ONE` 负责无缝循环。
- 授权失效时不创建播放器，转入重新选片流程。

## 开机启动边界

Android 10+ 对后台启动 Activity 有平台限制，厂商还可能增加电源管理策略。应用只使用标准广播和公开 API，不申请悬浮窗等高风险权限，也不使用 Android 15 已禁止从开机广播启动的媒体播放前台服务。需要强保证时应采用设备所有者/Kiosk 管理方案。
